<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_name"
            style="@style/Header"
            android:padding="5dp"
            android:text="@string/menjalankan_program_kotlin" />

        <LinearLayout
            style="@style/LinearViewTheme"
            android:orientation="vertical">

            <TextView
                style="@style/LinearViewDarkTheme"
                android:padding="5dp"
                android:text="@string/instalasi_openjdk" />

            <TextView
                android:id="@+id/tvJDK"
                style="@style/TextItem"
                tools:text="Isi" />
        </LinearLayout>

        <LinearLayout
            style="@style/LinearViewTheme"
            android:orientation="vertical">

            <TextView
                style="@style/LinearViewDarkTheme"
                android:padding="5dp"
                android:text="@string/installasi_gradle" />

            <TextView
                android:id="@+id/tvGradle"
                style="@style/TextItem"
                tools:text="Isi" />

        </LinearLayout>

        <LinearLayout
            style="@style/LinearViewTheme"
            android:orientation="vertical">

            <TextView
                style="@style/LinearViewDarkTheme"
                android:padding="5dp"
                android:text="@string/instalasi_intellij_idea" />

            <TextView
                android:id="@+id/tvIntelliJ"
                style="@style/TextItem"
                tools:text="Isi" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>