<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_name"
            style="@style/Header"
            android:padding="5dp"
            android:text="@string/bahasa_kotlin" />

        <LinearLayout
            style="@style/LinearViewTheme"
            android:orientation="vertical">

            <TextView
                style="@style/LinearViewDarkTheme"
                android:padding="5dp"
                android:text="@string/apa_itu_kotlin" />

            <TextView
                android:id="@+id/tvDefinition"
                style="@style/TextItem"
                tools:text="Isi" />
        </LinearLayout>

        <LinearLayout
            style="@style/LinearViewTheme"
            android:orientation="vertical">

            <TextView
                style="@style/LinearViewDarkTheme"
                android:padding="5dp"
                android:text="@string/keunggulan_kotlin" />

            <TextView
                android:id="@+id/tvPros"
                style="@style/TextItem"
                tools:text="Isi" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>