<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_name"
            style="@style/Header"
            android:padding="5dp"
            android:text="@string/data_types" />

        <LinearLayout
            style="@style/LinearViewTheme"
            android:orientation="vertical">

            <TextView
                style="@style/LinearViewDarkTheme"
                android:padding="5dp"
                android:text="@string/variable" />

            <TextView
                android:id="@+id/tvVariable1"
                style="@style/TextItem"
                tools:text="Isi" />

            <TextView
                android:id="@+id/tvVarSyntax"
                style="@style/TextItem.Syntax"
                android:fontFamily="@font/inconsolata"
                tools:text="syntax" />

            <TextView
                android:id="@+id/tvVariable2"
                style="@style/TextItem"
                tools:text="Isi" />

        </LinearLayout>

        <LinearLayout
            style="@style/LinearViewTheme"
            android:orientation="vertical">

            <TextView
                style="@style/LinearViewDarkTheme"
                android:padding="5dp"
                android:text="@string/data_type" />

            <TextView
                android:id="@+id/tvDataType"
                style="@style/TextItem"
                tools:text="Isi" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>